Fixed bug #14514: Long lines in module menu are unreadable
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/trunk@8021 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/sysext/t3skin/stylesheets/structure/module_menu.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/module_menu.css
@@ -45,7 +45,7 @@ $Id$
 }
 
 #typo3-menu li ul li {
-	height: 21px;
+	min-height: 21px;
 }
 
 #typo3-menu li ul li a {
